--- a/back/dockerfile
+++ b/back/dockerfile
@@ -13,5 +13,5 @@ COPY . .
 
 EXPOSE 4000
 
-CMD ["npm", "run", "build"]
-# CMD ["npm", "run", "start:dev"]
+# CMD ["npm", "run", "build"]
+CMD ["npm", "run", "start:dev"]
