--- a/back/dockerfile
+++ b/back/dockerfile
@@ -9,9 +9,7 @@ RUN npm install
 
 COPY . .
 
-# RUN 
 
 EXPOSE 4000
 
-# CMD ["npm", "run", "build"]
-CMD ["npm", "run", "start:dev"]
+CMD ["npm", "run", "build"]
